Añadimos nuevos estilos

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,3 +13,15 @@
  *= require_tree .
  *= require_self
  */
+
+.oculto{
+  display: none;
+}
+
+.bl_der{
+  float:right;
+}
+
+.bl_izq{
+  float:left;
+}
