Interfaz principal de usuario añadida (mostrar y ocultar pasos)

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -21,14 +21,14 @@
 			</div>
 			
 			<div class="col-md-offset-10 col-md-2">
-				<div id="siguiente_1"class="btn btn-lg btn-warning bl_der">Siguiente</div>
+				<div id="siguiente_1" class="btn btn-lg btn-warning bl_der">Siguiente</div>
 			</div>
 			
 		</div>
 	</div>
 	
 	<!--Datos del consumo del cliente-->
-	<div id="paso_2">
+	<div id="paso_2" class="oculto">
 		<div class="jumbotron">
 			
 			<h1>Paso 2/4</h1>
@@ -49,22 +49,30 @@
 				<%end%>
 			</table>
 			
-			<div class="col-md-offset-10 col-md-2">
-				<div id="siguiente_2"class="btn btn-lg btn-warning bl_der">Siguiente</div>
+			<div class="col-md-2">
+				<div id="anterior_2" class="btn btn-lg btn-warning">Anterior</div>
+			</div>
+			
+			<div class="col-md-offset-8 col-md-2">
+				<div id="siguiente_2" class="btn btn-lg btn-warning bl_der">Siguiente</div>
 			</div>
 			
 		</div>
 	</div>
 	
 	<!--Confirmación datos de cliente y consumo-->
-	<div id="paso_3">
+	<div id="paso_3" class="oculto">
 		<div class="jumbotron">
 			
 			<h1>Paso 3/4</h1>
 			<h2>Confirmación de datos</h2>
 			
-			<div class="col-md-offset-10 col-md-2">
-				<div id="siguiente_3"class="btn btn-lg btn-success bl_der">Guardar</div>
+			<div class="col-md-2">
+				<div id="anterior_3" class="btn btn-lg btn-warning">Anterior</div>
+			</div>
+			
+			<div class="col-md-offset-8 col-md-2">
+				<div id="siguiente_3" class="btn btn-lg btn-success bl_der">Guardar</div>
 			</div>
 			
 		</div>
@@ -73,7 +81,7 @@
 </form>
 
 <!--Resultado-->
-<div id="paso_4">
+<div id="paso_4" class="oculto">
 	<div class="jumbotron">
 			
 			<h1>Paso 4/4</h1>
